sdk_tests/tests/pbc_contract_codegen/fail/bad_arg_pattern_literal.stderr
error: custom attribute panicked
 --> tests/pbc_contract_codegen/fail/bad_arg_pattern_literal.rs:6:1
  |
6 | #[action]
  | ^^^^^^^^^
  |
  = help: message: Unsupported argument pattern: 5
